# VINS-Mono

./: .gitignore
config/: vins_rviz_config.rviz
config/euroc/: dyn_euroc_config.yaml
config/vicon/: v4rl_equi.yaml
feature_tracker/src/: feature_tracker_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: dyn_euroc.launch  dyn_vicon.launch  dyn_vicon.launch.bak  visensor.launch  visensor_rsl.launch  visensor_v4rl.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.h
vins_estimator/src/dynenv/: cluster.cc  cluster.h  pointclassifier.cc  pointclassifier.h  weightsIO.cc  weightsIO.h
vins_estimator/src/factor/: projection_factor.cpp  projection_factor.h
vins_estimator/src/initial/: initial_sfm.h
vins_estimator/src/pointclassifier/: pointclassifier.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
